[package]
name = "tquic"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
build = "src/build.rs"

[features]
# build the FFI API
ffi = []

# enable sfv
default = ["sfv"]

[dependencies]
bytes = "1"
rustc-hash = "1.1"
slab = "0.4"
enumflags2 = "0.7.5"
ring = "0.16"
libc = "0.2"
lazy_static = "1"
log = { version = "0.4", features = ["std"] }
strum = "0.24"
strum_macros = "0.24"
rand = "0.8.5"
smallvec = { version = "1.10", features = ["serde", "union"] }
timer_heap = "0.3.0"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
serde_with = "3.0.0"
hex = "0.4"
priority-queue = "1.3.2"
sfv = { version = "0.9", optional = true }

[dev-dependencies]
env_logger = "0.10.0"
mio = { version = "0.8", features = ["net", "os-poll"] }
tempfile = "3.5.0"
ctor = "0.2.2"
criterion = "0.3"

[build-dependencies]
cmake = "0.1"

[lib]
crate-type = ["lib", "staticlib"]

[workspace]
members = ["apps"]

[[bench]]
name = "timer_queue"
harness = false
