[package]
name = "tquic"
version = "0.10.0"
edition = "2021"
rust-version = "1.70.0"
license = "Apache-2.0"
repository = "https://github.com/tencent/tquic"
homepage = "https://tquic.net"
description = "A high-performance, lightweight, and cross-platform QUIC library"
keywords = ["quic"]
categories = ["network-programming"]
build = "src/build.rs"
include = [
    "/*.md",
    "/*.toml",
    "/LICENSE",
    "/src",
    "/benches",
    "/include",
    "/deps/boringssl/**/*.[chS]",
    "/deps/boringssl/**/*.asm",
    "/deps/boringssl/src/**/*.cc",
    "/deps/boringssl/**/CMakeLists.txt",
    "/deps/boringssl/**/sources.cmake",
    "/deps/boringssl/LICENSE",
]

[features]
# build the FFI API
ffi = []

[dependencies]
bytes = "1"
rustc-hash = "1.1"
slab = "0.4"
enumflags2 = "0.7.5"
ring = "0.17"
libc = "0.2"
lazy_static = "1"
log = { version = "0.4", features = ["std"] }
strum = "0.24"
strum_macros = "0.24"
rand = "0.8.5"
smallvec = { version = "1.10", features = ["serde", "union"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
serde_with = "3.0.0"
hex = "0.4"
priority-queue = "1.3.2"
sfv = { version = "0.9" }

[dev-dependencies]
env_logger = "0.10.0"
mio = { version = "0.8", features = ["net", "os-poll"] }
tempfile = "3.5.0"
ctor = "0.2.2"
criterion = "0.3"
timer_heap = "0.3.0"

[build-dependencies]
cmake = "0.1"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[workspace]
members = ["tools"]

[[bench]]
name = "timer_queue"
harness = false
