[package]
name = "tquic-fuzz"
version = "0.0.2"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
lazy_static = "1.4.0"

[dependencies.tquic]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true

[[bin]]
name = "client_conn"
path = "fuzz_targets/client_conn.rs"
test = false
doc = false

[[bin]]
name = "server_conn"
path = "fuzz_targets/server_conn.rs"
test = false
doc = false
