[package]
name = "tquic_tools"
version = "0.9.0"
edition = "2021"
rust-version = "1.70.0"
license = "Apache-2.0"
repository = "https://github.com/tencent/tquic"
homepage = "https://tquic.net"
description = "TQUIC client and server tools"
keywords = ["quic"]
categories = ["network-programming"]

[dependencies]
bytes = "1"
url = "1"
log = "0.4"
mio = { version = "0.8", features = ["net", "os-poll"] }
env_logger = "0.9"
clap = { version = "=4.2.5", features = ["derive"] }
rustc-hash = "1.1"
slab = "0.4"
rand = "0.8.5"
statrs = "0.16"
jemallocator = { version = "0.5", package = "tikv-jemallocator" }
signal-hook = "0.3.17"
tquic = { path = "..", version = "0.9.0"}

[lib]
crate-type = ["lib"]
path = "src/common.rs"

[[bin]]
name="tquic_client"
path="src/bin/tquic_client.rs"

[[bin]]
name="tquic_server"
path="src/bin/tquic_server.rs"
